- UI fix in report spacing

--- a/DiplomaThesis/Client/Pages/Metrics.razor.scss
+++ b/DiplomaThesis/Client/Pages/Metrics.razor.scss
@@ -6,7 +6,6 @@
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: space-around;
-    gap: 10px;
 
     .item {
         width: calc(40vw - 30px);
